# gl_photo_editor

./: CMakeLists.txt  LICENSE  README.org  main.cpp
